# tsc-benchmark

./: .gitignore  CMakeLists.txt  README.md  example.cpp
include/: tsc_benchmark.h  tsc_clock.h  tsc_cpu.h
include/utils/: affinity.h  compiler.h  types.h
